modified misleading heading

--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalized Distribution of Products with respect to Gender"
+    "### Amount spent with respect to Gender"
    ]
   },
   {
